# secondlayer-agents

./: .gitignore  README.md  app.py  architecture.html  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
problems/: consumer_penalty.yaml  labor_dismissal.yaml  property_dispute.yaml
src/legal_intern/: __init__.py  engine.py  main.py
src/legal_intern/agents/: __init__.py  adjudicator.py  analyst.py  base.py  critic.py  planner.py  researcher.py  surveyor.py
src/legal_intern/core/: config.py
src/legal_intern/providers/: __init__.py
src/legal_intern/state/: loop_state.py  research_state.py
src/lmaf/: __init__.py  engine.py  main.py
src/lmaf/agents/: base.py  formatter.py  orchestrator.py  reviewer.py
src/lmaf/core/: __init__.py  config.py  workspace.py
src/lmaf/providers/: __init__.py
src/lmaf/rendering/: __init__.py
src/lmaf/state/: __init__.py
src/lmaf/tools/: secondlayer_bridge.py
tests/: conftest.py  test_app.py  test_config.py  test_state.py
