[project]
name = "lmaf"
version = "0.1.0"
description = "Multi-agent scaffolding for complex legal consultations over Ukrainian court decisions"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "Volodymyr Ovcharov", email = "mcvovkes@gmail.com" },
]
keywords = ["legal-nlp", "multi-agent", "legal-consultation", "ukraine", "court-decisions"]

dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "rich>=13.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
testing = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
]
quality = [
    "ruff>=0.5",
]
all-providers = [
    "google-genai>=1.0",
    "huggingface-hub>=0.25",
]

[project.scripts]
lmaf = "lmaf.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
